[gd_scene load_steps=5 format=3 uid="uid://nkrbmjwht41m"]

[ext_resource type="Script" uid="uid://c3cbvduxhlwpv" path="res://Scripts/main_menu.gd" id="1_tt5f1"]
[ext_resource type="Texture2D" uid="uid://bpoi1uyh6ogvx" path="res://Assets/ThirdParty/Rocky Roads/Deco/water_a_8frames.png" id="2_8saeu"]
[ext_resource type="Texture2D" uid="uid://ccydne0yw5jj1" path="res://Assets/ThirdParty/Rocky Roads/Backgrounds/mountains_a.png" id="3_ghw46"]
[ext_resource type="Texture2D" uid="uid://bt372akl0ptyy" path="res://Assets/ThirdParty/Rocky Roads/Backgrounds/trees.png" id="4_ghw46"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tt5f1")

[node name="WaterA8Frames" type="Sprite2D" parent="."]
position = Vector2(574.5, 282)
scale = Vector2(4.49609, 15.75)
texture = ExtResource("2_8saeu")

[node name="MountainsA" type="Sprite2D" parent="."]
position = Vector2(574, 468.5)
scale = Vector2(4.52344, 2.78906)
texture = ExtResource("3_ghw46")

[node name="WaterA8Frames2" type="Sprite2D" parent="."]
position = Vector2(576, 51)
scale = Vector2(4.49609, 9.75)
texture = ExtResource("2_8saeu")

[node name="Trees" type="Sprite2D" parent="."]
position = Vector2(575.5, 546.5)
scale = Vector2(4.51953, 1.82031)
texture = ExtResource("4_ghw46")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="QuitGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
